Add CommonJS-based dependencies

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "prettier": "@shopify/prettier-config",
   "dependencies": {
+    "@ninetailed/experience.js-react": "^7.6.1",
     "@remix-run/react": "^2.8.0",
     "@remix-run/server-runtime": "^2.8.0",
     "@shopify/cli": "3.59.2",
@@ -21,6 +22,7 @@
     "@shopify/remix-oxygen": "^2.0.4",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
+    "i18n-iso-countries": "^7.11.2",
     "isbot": "^3.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
